[package]
name = "rgoto"
version = "0.1.0"
authors = ["Jiwan Chung <jiwan.chung.research@gmail.com>"]
edition = "2021"
license = "MIT" # Or another appropriate license

[dependencies]
cliclack = "0.2.5"
inquire = "0.2"
dirs = "4.0"
console = "0.15.8"
strsim = "0.11.1"
textwrap = "0.16.0"
zeroize = {version = "1.6.0", features = ["derive"]}
once_cell = "1.18.0"
rayon = "1.5"
crossterm = "0.23"
