[package]
name = "rgoto"
version = "0.1.0"
authors = ["Jiwan Chung <jiwan.chung.research@gmail.com>"]
edition = "2021"
license = "MIT" # Or another appropriate license
description = "rgoto is a Rust-based command-line tool that reads your SSH configuration file (~/.ssh/config), presents a list of configured hosts, and allows you to select one to SSH into interactively. This work is partially inspired by goto. Also, this project borrows and modifies some codes from cliclack to support hjkl and index based navigation."

[dependencies]
cliclack = "0.2.5"
inquire = "0.2"
dirs = "4.0"
console = "0.15.8"
strsim = "0.11.1"
textwrap = "0.16.0"
zeroize = {version = "1.6.0", features = ["derive"]}
once_cell = "1.18.0"
rayon = "1.5"
crossterm = "0.23"
